# MarketProfileBot

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: tests.yml
mql5/: MT5_SETUP.md  NasdaqPreNyseIBRaidExtension.mq5
src/market_profile_bot/: __init__.py  app.py  bingx_executor.py  config.py  ctrader_executor.py  dedupe.py  execution.py  models.py  mt5_executor.py  risk.py  telegram.py  trade_limiter.py  trading.py
tests/: test_app.py  test_bingx_executor.py  test_config.py  test_ctrader_executor.py  test_models.py  test_mt5_executor.py  test_risk.py  test_telegram.py  test_trade_limiter.py  test_trading.py  test_vanta_trading_executor.py
tradingview/: nasdaq_pre_nyse_ib_extension.pine  nasdaq_pre_nyse_ib_raid_extension.pine
