[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-profile-bot"
version = "0.1.0"
description = "TradingView webhook bot for NASDAQ Pre-NYSE IB cTrader execution"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "python-dotenv>=1,<2",
    "tzdata>=2024.1",
    "ctrader-open-api>=0.9.2,<1",
    "service-identity>=24.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
