[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-profile-bot"
version = "0.1.0"
description = "TradingView webhook bot for NASDAQ Pre-NYSE IB BingX execution"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "python-dotenv>=1,<2",
    "tzdata>=2024.1",
]

[tool.setuptools.packages.find]
where = ["src"]
